feat: cargue de costos por plu